--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-rgb: 0, 0, 0;
+    --foreground-rgb: 0, 0, 0;
+    --background-rgb: 255, 255, 255;
 
     --heading-color: 0, 0, 0;
     --paragraph-color: 82, 82, 91;
@@ -120,10 +120,10 @@ small {
 
 @keyframes hideDiv {
   0% {
-    background: rgba(255, 255, 255, 1);
+    background: rgba(var(--background-rgb), 1);
     /* opacity: 0.5; */
     backdrop-filter: blur(20px);
-    color: black;
+    color: var(--foreground-rgb);
   }
 
   70% {
@@ -132,16 +132,16 @@ small {
 
   100% {
     /* opacity: 0; */
-    background: rgba(255, 255, 255, 0);
+    background: rgba(var(--background-rgb), 0);
     backdrop-filter: blur(0px);
     color: transparent;
   }
 }
 
 .hide-element {
-  background: rgba(255, 255, 255, 1);
+  background: rgba(var(--background-rgb), 1);
   animation: hideDiv 2.5s forwards;
-  color: black;
+  color: var(--foreground-rgb);
   /* backdrop-filter: blur(20px); */
   animation-delay: 1s;
   pointer-events: none;
